Fixing minor layout issue and shadow

--- a/app/styles/containers/_music.scss
+++ b/app/styles/containers/_music.scss
@@ -1,6 +1,7 @@
 .music_app {
+  margin-top:0 auto;
   .card {
-       box-shadow:0px 2px 5px 0px rgba(0,0,0,0.25);
+       box-shadow:0px 10px 25px 0px rgba(0,0,0,0.25);
        .loadingMessage{
             text-align:center;
             display:block;
